[workspace]
members = [
    ".",
    "reqwest-scraper-macros",
]

[package]
name = "reqwest-scraper"
version = "0.2.1"
edition = "2021"
description = "Web scraping integration with reqwest"
license-file = "LICENSE"
repository = "https://github.com/holmofy/reqwest-scraper"

[lib]
name = "reqwest_scraper"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
darling = "0.20.10"
itertools = "0.13"
jsonpath_lib = { version = "0.3", optional = true }
libxml = { version = "0.3", optional = true }
reqwest = { version = "0.12" }
scraper = { version = "0.19", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[features]
default = ["jsonpath", "css_selector", "xpath"]
jsonpath = ["jsonpath_lib", "serde", "serde_json", "reqwest/json"]
xpath = ["libxml"]
css_selector = ["scraper"]

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1", features = ["full"] }
