[workspace]
members = [".", "reqwest-scraper-macros"]

[package]
name = "reqwest-scraper"
version = "0.6.4"
edition = "2021"
description = "Web scraping integration with reqwest"
license = "MIT"
authors = ["holmofy"]
repository = "https://github.com/holmofy/reqwest-scraper"

[lib]
name = "reqwest_scraper"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
itertools = "0.14"
reqwest = "0.12"
reqwest-middleware = { version = "0.4", optional = true }
mime = "0.3"
encoding_rs = "0.8"
jsonpath_lib = { version = "0.3", optional = true }
libxml = { version = "0.3", optional = true }
scraper = { version = "0.23", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_path_to_error = { version = "0.1", optional = true }
reqwest-scraper-macros = { version = "0.6.2", path = "./reqwest-scraper-macros", optional = true }
thiserror = "2.0"

[features]
default = ["json", "jsonpath", "css_selector", "xpath", "macros"]
json = ["serde", "serde_json", "reqwest/json", "serde_path_to_error"]
jsonpath = ["jsonpath_lib", "serde", "serde_json", "reqwest/json"]
xpath = ["libxml"]
css_selector = ["scraper"]
macros = ["reqwest-scraper-macros"]
middleware = ["reqwest-scraper-macros/middleware", "reqwest-middleware"]

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1", features = ["full"] }
reqwest-middleware = { version = "0.4" }
