[package]
name = "reqwest-proxy-pool"
version = "0.4.0"
edition = "2021"
description = "Web scraping integration with reqwest"
license = "MIT"
authors = ["holmofy"]
repository = "https://github.com/holmofy/reqwest-scraper"

[dependencies]
reqwest = { version = "0.12" }
reqwest_scraper = { path = "../" }
