[package]
name = "reqwest-proxy-pool"
version = "0.4.0"
edition = "2021"
description = "Web scraping integration with reqwest"
license = "MIT"
authors = ["holmofy"]
repository = "https://github.com/holmofy/reqwest-scraper"

[dependencies]
reqwest = "0.12"
reqwest-scraper = { path = "../" }
thiserror = "1.0"
inventory = "0.3"
async-trait = "0.1"
tokio = "1"
log = "0.4"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
