[package]
name = "reqwest-scraper-macros"
version = "0.2.1"
edition = "2021"
description = "Web scraping integration with reqwest"
license-file = "LICENSE"
repository = "https://github.com/holmofy/reqwest-scraper"

[lib]
name = "reqwest_scraper_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
darling = "0.20.10"
scraper = { version = "0.19", default-features = false }

[dev-dependencies]
reqwest-scraper = { version = "0.2", path = "../" }
