[package]
name = "reqwest-scraper-macros"
version = "0.5.4"
edition = "2021"
description = "Web scraping integration with reqwest"
license = "MIT"
authors = ["holmofy"]
repository = "https://github.com/holmofy/reqwest-scraper"

[lib]
name = "reqwest_scraper_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
darling = "0.20.10"
scraper = { version = "0.20", default-features = false }
lazy_static = "1.5"
regex = "1.11"